# MovementSync

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/Client/: ClientMessageHandler.cpp  ClientMessageHandler.h  Game.cpp  Game.h  Network.cpp  Network.h  World.cpp  World.h  main.cpp
src/Common/: Vector2.cpp  Vector2.h
src/Common/AStar/: Grid.cpp  Grid.h  Node.cpp  Node.h  PathFinding.cpp  PathFinding.h
src/Common/Game/: Entity.cpp  Entity.h
src/Common/Math/: Vector2f.cpp  Vector2f.h  Vector2f_NetQuantize.cpp  Vector2f_NetQuantize.h
src/Common/Protocol/: Message.cpp  Message.h  Protocol.cpp  Protocol.h
src/Common/Utils/: Time.cpp  Time.h
src/Server/: Game.cpp  Network.cpp  Network.h  ServerMessageHandler.cpp  ServerMessageHandler.h  Session.cpp  Session.h  Task.h  World.cpp  World.h  main.cpp
